fix card overflow

--- a/style.css
+++ b/style.css
@@ -41,8 +41,13 @@ body{
 	justify-content: space-evenly;
 	align-items: center;
 	flex-wrap: wrap;
-}
+	height:100%;
+	overflow: hidden;
 
+}
+.deck{
+	min-width: 20vh;
+}
 .buttons {
 	width: 80vw;
 	max-width: 720px;
@@ -74,17 +79,19 @@ button:hover {
 }
 
 .card{
-font-size: 30px;
-box-shadow:
+font-size: 20px;
+margin: 2px;
+/* box-shadow:
   1.2px 3.6px 2.7px rgba(0, 0, 0, 0.02),
   2.9px 8.6px 6.5px rgba(0, 0, 0, 0.028),
   5.4px 16.2px 12.3px rgba(0, 0, 0, 0.035),
   9.6px 28.8px 21.9px rgba(0, 0, 0, 0.042),
   18px 53.9px 40.9px rgba(0, 0, 0, 0.05),
-  43px 129px 98px rgba(0, 0, 0, 0.07)}
+  43px 129px 98px rgba(0, 0, 0, 0.07) */
+}
 
-@media only screen and (max-width: 678px){
+@media only screen and (min-width: 678px){
 	.card{
-		font-size: 22px;
+		font-size: 30px;
 	}
 }
